fix sponsor display on small screens

--- a/index.css
+++ b/index.css
@@ -283,4 +283,9 @@ img {
     #links a {
         font-size: 1.5rem;
     }
+
+    .sponsor-img {
+        display: block;
+        margin: 20px auto;
+    }
 }
